[gd_scene load_steps=5 format=3 uid="uid://dykorum1hey1y"]

[ext_resource type="Script" path="res://scenes/coins/coin1.gd" id="1_lhid8"]
[ext_resource type="Texture2D" uid="uid://byorwrgq8h08a" path="res://assets/game elements.png" id="2_234d0"]
[ext_resource type="AudioStream" uid="uid://bi6riuh52buby" path="res://sound/coin.mp3" id="3_18w25"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rl4bk"]
radius = 39.5601

[node name="Node2D" type="Node2D"]
script = ExtResource("1_lhid8")

[node name="Area2d" type="Area2D" parent="."]
scale = Vector2(0.7, 0.7)
collision_layer = 0

[node name="Sprite2D" type="Sprite2D" parent="Area2d"]
texture = ExtResource("2_234d0")
region_enabled = true
region_rect = Rect2(660, 379, 81, 80)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2d"]
shape = SubResource("CircleShape2D_rl4bk")

[node name="scoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_18w25")

[connection signal="body_entered" from="Area2d" to="." method="_on_body_entered"]
[connection signal="finished" from="scoreSound" to="." method="_on_score_sound_finished"]
